[package]
name = "nft-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.151", features = ["derive"] }

tiny-keccak = { version = "2.0.2", features = ["sha3"] }
hex = "0.4.3"

image = "0.24.5"

anyhow = "1.0.66" # ¯\_(°ペ)_/¯

log = "0.4"
pretty_env_logger = "0.4" # o_O

rand = "0.8.5"

tokio = { version = "1.23.0", features = ["full"] }